--- a/styles.css
+++ b/styles.css
@@ -58,32 +58,32 @@ ul {
 }
 @media screen and (min-width: 0px) and (max-width: 568px) {
   .is-mb {
-  background: red;
+  background: cadetblue;
   padding: 1px 3px;
   }
 }
 
 @media screen and (min-width: 568px) and (max-width: 768px) {
   .is-sm {
-  background: red;
+  background: cadetblue;
   padding: 1px 3px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1020px){
   .is-md {
-  background: red;
+  background: cadetblue;
   padding: 1px 3px;
   }
 }
 @media screen and (min-width: 1020px) and (max-width: 1280px){
   .is-lg {
-  background: red;
+  background: cadetblue;
   padding: 1px 3px;
   }
 }
 @media screen and (min-width: 1280px) {
   .is-xl {
-  background: red;
+  background: cadetblue;
   padding: 1px 3px;
   }
 }
